--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@
 	max-width: 1000px;
 	background: white;
 	margin: 0 auto;
-	border-bottom: 1px lightgray solid;
+	border-bottom: 1px white solid;
 	padding: 5px 0;
 }
 
